error_templates/java/test_files/parse_end_of_file_if/test.txt
name: "If2"
template: "Java.ParseEndOfFileError"
---
BracketMismatch.java:8: error: reached end of file while parsing
}
 ^
1 error
===
template: "Java.ParseEndOfFileError"
---
# ParseEndOfFileError
This error occurs when the compiler expects more code but encounters the end of the file.
```
    }
}
 ^
```
## Steps to fix
### Complete the code
Add the missing `}` in line 8.
```diff
          // Missing closing bracket for if statement
    }
}
+ }
```
